[gd_scene load_steps=2 format=2]

[ext_resource path="res://tela_inicial.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 676.0
margin_top = 33.0
margin_right = 1006.0
margin_bottom = 119.0
text = "Exibir lista"

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 25.0
margin_top = 29.0
margin_right = 635.0
margin_bottom = 118.0

[node name="resposta" type="RichTextLabel" parent="ColorRect"]
modulate = Color( 0.447059, 0.109804, 0.109804, 1 )
self_modulate = Color( 0.0705882, 0.0117647, 0.0117647, 1 )
margin_right = 607.0
margin_bottom = 90.0

[node name="lista" type="LineEdit" parent="."]
margin_left = 26.0
margin_top = 133.0
margin_right = 636.0
margin_bottom = 224.0

[node name="respostaLista" type="Label" parent="."]
margin_left = 250.0
margin_top = 232.0
margin_right = 855.0
margin_bottom = 279.0
align = 1
valign = 1

[node name="botão2" type="Button" parent="."]
margin_left = 675.0
margin_top = 134.0
margin_right = 1010.0
margin_bottom = 226.0
text = "Exibir lista"

[node name="Button2" type="Button" parent="."]
margin_left = 684.0
margin_top = 307.0
margin_right = 1011.0
margin_bottom = 396.0
text = "Exibir texto"

[node name="Button3" type="Button" parent="."]
margin_left = 684.0
margin_top = 416.0
margin_right = 1011.0
margin_bottom = 505.0
text = "Exibir texto"

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 30.0
margin_top = 300.0
margin_right = 641.0
margin_bottom = 388.0

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 34.0
margin_top = 413.0
margin_right = 641.0
margin_bottom = 502.0

[node name="Label" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 30.0
margin_top = 303.0
margin_right = 644.0
margin_bottom = 386.0
text = "asdasdasdasdasdasd"

[node name="Label2" type="Label" parent="."]
margin_left = 212.0
margin_top = 529.0
margin_right = 826.0
margin_bottom = 579.0

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="botão2" to="." method="_on_boto2_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
